--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,20 +1,25 @@
 <div class="container">
 
 
-  <div class="login">
+  <div class="login" *ngIf="!logueado">
     <h2>Ingrese</h2>
+    <div class="alert alert-dismissible alert-danger" *ngIf="error">
+      {{ error }}
+    </div>
     <div class="form-group ">
       <label>Correo electrónico</label>
-      <input type="email" class="form-control " placeholder="Ingrese Correo">
+      <input type="email" class="form-control " placeholder="Ingrese Correo" [(ngModel)]="correo">
     </div>
     <div class="form-group ">
       <label>Contraseña</label>
-      <input type="password" class="form-control " placeholder="Contraseña">
+      <input type="password" class="form-control " placeholder="Contraseña" [(ngModel)]="clave">
     </div>
-    
+    <button class="btn btn-success " (click)="loginClick()" [ngClass]="( cargando || !correo || !clave ) ? 'disabled' : '' ">
+      {{ ( cargando ) ? 'Cargando ...' : 'Login'  }}
+    </button>
   </div>
 
-  <div class="logueado">
+  <div class="logueado" *ngIf="logueado">
     <h2>
       Bienvenido!
     </h2>
