--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -18,11 +18,14 @@
       </ul>
 
       <ul class="nav navbar-nav ml-auto">
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!_usuario.usuario.id_usuario">
           <a class="nav-link" routerLink="login">Ingresar</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!_usuario.usuario.id_usuario">
           <a class="nav-link" routerLink="registro" >Registrar</a>
+        </li>
+        <li class="nav-item" *ngIf="_usuario.usuario.id_usuario">
+          {{ _usuario.usuario.paterno }}, {{ _usuario.usuario.nombres }}
         </li>
       </ul>
 
