--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -15,7 +15,7 @@
 
         </ul>
         <p>Desarrollado por
-          <a href="#">MATCH MONEY</a>.</p>
+          <a href="#">123depositos</a>.</p>
 
       </div>
     </div>
