--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container"> 
 
 
   <div class="login" *ngIf="!logueado">
@@ -14,7 +14,7 @@
       <label>Contraseña</label>
       <input type="password" class="form-control " placeholder="Contraseña" [(ngModel)]="clave">
     </div>
-    <button class="btn btn-success " (click)="loginClick()" [ngClass]="( cargando || !correo || !clave ) ? 'disabled' : '' ">
+    <button class="btn btn-success " (click)="loginClick()" [disabled]="( cargando || !correo || !clave ) ? 'disabled' : '' " >
       {{ ( cargando ) ? 'Cargando ...' : 'Login'  }}
     </button>
   </div>
