--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,7 +12,13 @@
           <a class="nav-link" href="#">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Quienes Somos</a>
+          <a class="nav-link" routerLink="compania">Nuesta Compañía</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="como">Como funciona</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="contacto">Contacto</a>
         </li>
 
       </ul>
