formulario transferencias y bancos

--- a/src/app/pages/como/como.component.html
+++ b/src/app/pages/como/como.component.html
@@ -4,18 +4,70 @@
     Como funciona
   </h2>
 
+  <h3>Paso 1</h3>
+  <ol>
+    <li>
+      <a routerLink="/registro">Regístrate</a>  e <a routerLink="/login">inicia sesión</a>.
+    </li>
+    <li>
+      Ingresa a la pestaña <a routerLink="/abono">transferencias.</a>
+    </li>
+    <li>
+      Simula tu monto a transferir.
+    </li>
+    <li>
+      Verificar el monto que va a llegar a destino.
+    </li>
+  </ol>
+  <h3>
+    Paso 2
+  </h3>
+  <ol>
+    <li>
+      Realiza tu abono a la cuenta empresa por transferencia electrónica o en las sucursales BCI más cercanas (<a href="https://www.bci.cl/personas/sucursales"
+        target="_blank">ver mapa BCI
+      </a>).
+    </li>
+    <li>
+      Datos bancarios de la empresa:
+      <ul>
+        <li>
+          Nombre de la empresa: TECNOSEG
+        </li>
+        <li>
+          Rut: 76.145.716-0
+        </li>
+        <li>
+          Banco: BCI
+        </li>
+        <li>
+          Tipo de cuenta: Corriente
+        </li>
+        <li>
+          N°de cuenta: 54005078
+        </li>
+        <li>
+          Correo: <a href="mailto:abonos@123depositos.com">abonos@123depositos.com</a>
+        </li>
+      </ul>
+    </li>
+    <li>
+      Envía tu comprobante de depósito al correo electrónico: <a href="mailto:abonos@123depositos.com">abonos@123depositos.com</a>
+    </li>
+  </ol>
 
-    <ul>
-      <li>
-        Registrate e inicia sesión
-      </li>
-      <li>
-        Introduce los datos del destinatario.
-      </li>
-      <li>
-        Confirma tu deposito.
-      </li>
-    </ul>
-
-
+  <h3>
+    Paso 3
+  </h3>
+  <ol>
+    <li>
+      Ingresa a tu destinatario (Nuevo / ya registrado en tu cuenta 123depositos.com).
+    </li>
+    <li>
+      Adjunta tu deposito.
+    </li>
+    <li>
+      Hace click en la pestaña (ya transferí).
+    </li>
+  </ol>
 </div>
