--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -17,17 +17,17 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="como">Como funciona</a>
         </li>
-        <li class="nav-item dropdown"   >
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="transferencias" >Transferencias <span class="caret"></span></a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="transferencias">Transferencias <span class="caret"></span></a>
           <div class="dropdown-menu" aria-labelledby="transferencias">
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" routerLink="abono" >Realizar abono</a>
+            <a class="dropdown-item" routerLink="abono">Transferencia</a>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="contacto">Contacto</a>
         </li>
-        
+
 
       </ul>
 
@@ -36,10 +36,13 @@
           <a class="nav-link" routerLink="login">Ingresar</a>
         </li>
         <li class="nav-item" *ngIf="!_usuario.usuario.id_usuario">
-          <a class="nav-link" routerLink="registro" >Registrar</a>
+          <a class="nav-link" routerLink="registro">Registrar</a>
+        </li>
+        <li class="p-1" *ngIf="_usuario.usuario.id_usuario">
+          {{ _usuario.usuario.paterno }}, {{ _usuario.usuario.nombres }}
         </li>
         <li class="nav-item" *ngIf="_usuario.usuario.id_usuario">
-          {{ _usuario.usuario.paterno }}, {{ _usuario.usuario.nombres }}
+          <a class="btn btn-sm btn-outline-secondary" href="#" (click)="cerrar()" >Cerrar sesión</a>
         </li>
       </ul>
 
