se agrega logo y otas cosas

--- a/src/app/pages/abono/abono.component.html
+++ b/src/app/pages/abono/abono.component.html
@@ -1,7 +1,7 @@
 <div class="container principal " *ngIf="!_usuario.usuario.id_usuario">
 
   <h2>
-    Registrate
+    Regístrate
   </h2>
   <p>
     Para realizar transferencias debes estar registrado. Si ya estás registrado <a routerLink="login">ingresa acá</a>
