--- a/src/app/pages/como/como.component.html
+++ b/src/app/pages/como/como.component.html
@@ -1,7 +1,7 @@
 <div class="container principal">
 
   <h2>
-    Como funciona
+    Cómo funciona
   </h2>
 
   <h3>Paso 1</h3>
@@ -64,10 +64,10 @@
       Ingresa a tu destinatario (Nuevo / ya registrado en tu cuenta 123depositos.com).
     </li>
     <li>
-      Adjunta tu deposito.
+      Adjunta tu depósito.
     </li>
     <li>
-      Hace click en la pestaña (ya transferí).
+      Haz click en la pestaña (ya transferí).
     </li>
   </ol>
 </div>
