--- a/src/app/pages/compania/compania.component.html
+++ b/src/app/pages/compania/compania.component.html
@@ -1,18 +1,17 @@
 <div class="container principal">
 
-  <h2>Nuesta compañía</h2>
+  <h2>Nuestra compañía</h2>
   <p>
-    Somos una compañía que surge de la necesidad de satisfacer ampliamente el mercado de cambio de divisas, iniciando a favor
-    de simplificar el paso de dinero a Venezuela. Contamos con alta experiencia que brinda credibilidad y confianza en el
-    mercado.
+    Somos una compañía que busca satisfacer la necesidad de cambio de divisas, simplificando el envío de dineros a Venezuela.
+    Contamos con amplia experiencia en el mercado, la que brinda credibilidad y confianza a nuestros clientes.
   </p>
 
   <h2>
     Nuestra misión
   </h2>
   <p>
-    Nuestra misión es prestar el mejor intercambio de moneda, Solucionando las necesidades de nuestros clientes de manera rápida
-    y sencilla.
+    Nuestra misión es solucionar, ágilmente, las necesidades de intercambio de moneda de nuestros clientes, brindando un servicio
+    de calidad, caracterizado por la rapidez, la seguridad y la seriedad.
   </p>
   <p>
     El objetivo de 123depositos.com se basa en prestar a los clientes una atención de calidad, digna, rápida y segura, proporcionando
