--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -1,7 +1,7 @@
 <div class="container principal">
   <h2>Contacto</h2>
   <p>
-    Cualquier duda o sugerencia escribanos a:
+    Cualquier duda o sugerencia, escríbanos a:
   </p>
   <div class="row">
     <div class="col-md-3">
@@ -30,8 +30,8 @@
     <li>
       ¿En cuanto tiempo dispongo de mi dinero?
       <p>
-        Maximo 24 horas si las transferencias son del mismo banco.
-        <br> Si las transferencias son a distintos Bancos en un período de 72 horas, ese tiempo varia dependiendo del banco receptor.
+        Máximo 24 horas si las transferencias son del mismo banco.
+        <br> Si las transferencias son a distintos bancos en un período de 72 horas, ese tiempo varia dependiendo del banco receptor.
       </p>
     </li>
 
