--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -25,7 +25,7 @@
       <input type="text" class="form-control " placeholder="Nombres" [(ngModel)]="usuario.nombres" >
     </div>
     <div class="form-group ">
-      <label>Pais</label>
+      <label>País</label>
       <select class="form-control" [(ngModel)]="usuario.pais" >
         <option value="Chile">Chile</option>
         
