--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,14 +4,18 @@
     <div class="row">
       <div class="col-lg-12">
 
-        <ul class="list-unstyled">
+        <ul class="list-unstyled sociales" >
+          <li>
+            <a href="https://Twitter.com/123depositos"><i class="fab fa-twitter"></i> Twitter</a>
+          </li>
+          <li>
+            <a href="https://www.Instagram.com/123depositos/"><i class="fab fa-instagram"></i> Instagram</a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i> Facebook</a>
+          </li>
 
-          <li>
-            <a href="https://facebook.com">Facebook</a>
-          </li>
-          <li>
-            <a href="https://twitter.com"> Twitter</a>
-          </li>
+
 
         </ul>
         <p>Desarrollado por
