--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,21 +1,21 @@
-<div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
+<!-- <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary"> -->
+<div class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
   <div class="container">
-    <a routerLink="login" class="navbar-brand">123depositos.com</a>
+    <a routerLink="login" class="navbar-brand"> <img src="assets/img/123depositos_1.png" width="150px"> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav">
-
         <li class="nav-item">
           <a class="nav-link" routerLink="login">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="compania">Nuesta Compañía</a>
+          <a class="nav-link" routerLink="compania">Nuestra compañía</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="como">Como funciona</a>
+          <a class="nav-link" routerLink="como">Cómo funciona</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="transferencias">Transferencias <span class="caret"></span></a>
@@ -27,10 +27,7 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="contacto">Contacto</a>
         </li>
-
-
       </ul>
-
       <ul class="nav navbar-nav ml-auto">
         <li class="nav-item" *ngIf="!_usuario.usuario.id_usuario">
           <a class="nav-link" routerLink="login">Ingresar</a>
@@ -42,7 +39,7 @@
           {{ _usuario.usuario.paterno }}, {{ _usuario.usuario.nombres }}
         </li>
         <li class="nav-item" *ngIf="_usuario.usuario.id_usuario">
-          <a class="btn btn-sm btn-outline-secondary" href="#" (click)="cerrar()" >Cerrar sesión</a>
+          <a class="btn btn-sm btn-outline-primary" href="#" (click)="cerrar()">Cerrar sesión</a>
         </li>
       </ul>
 
