--- a/src/app/pages/abono/abono.component.html
+++ b/src/app/pages/abono/abono.component.html
@@ -26,7 +26,10 @@
 
     <div class="form-group">
       <label for="exampleInputFile">Adjuntar comprobante</label>
-      <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
+      <div>
+        <img *ngIf="imagen" [src]="imagen" width="100px">
+      </div>
+      <input type="file" (change)="seleccionarImagen($event.target.files[0])" class="form-control-file" aria-describedby="fileHelp">
       <small id="fileHelp" class="form-text text-muted">Adjunte el comprobante de depósito.</small>
     </div>
     <div class="form-group">
