--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -22,6 +22,7 @@
           <div class="dropdown-menu" aria-labelledby="transferencias">
 
             <a class="dropdown-item" routerLink="abono">Transferencia</a>
+            <a class="dropdown-item" routerLink="transferencias">Mis transferencias</a>
           </div>
         </li>
         <li class="nav-item">
