--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,13 +6,16 @@
 
         <ul class="list-unstyled sociales" >
           <li>
-            <a href="https://Twitter.com/123depositos"><i class="fab fa-twitter"></i> Twitter</a>
+            <a href="https://Twitter.com/123depositos" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
           </li>
           <li>
-            <a href="https://www.Instagram.com/123depositos/"><i class="fab fa-instagram"></i> Instagram</a>
+            <a href="https://www.Instagram.com/123depositos/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
           </li>
           <li>
-            <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i> Facebook</a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
+          </li>
+          <li>
+            <a href="https://wa.me/56935689629" target="_blank"><i class="fab fa-whatsapp"></i> Whatsapp</a>
           </li>
 
 
