--- a/src/app/pages/compania/compania.component.css
+++ b/src/app/pages/compania/compania.component.css
@@ -1,4 +1,26 @@
 
 .principal {
     min-height: 600px;
+    font-size: 1.2em;
+    padding-left: 0px;
+    padding-right: 0px;
+
 }
+
+.compania {
+    background-color: #00aeeb;
+    color: white ;
+    padding: 1rem;
+}
+.compania h2 {
+    color: white;
+}
+
+.mision {
+    padding: 1rem;
+}
+
+.mision h2 {
+    color: black;
+}
+
