--- a/src/app/pages/compania/compania.component.html
+++ b/src/app/pages/compania/compania.component.html
@@ -1,20 +1,37 @@
-<div class="container principal">
+<div class="container-fluid principal">
 
-  <h2>Nuestra compañía</h2>
-  <p>
-    Somos una compañía que busca satisfacer la necesidad de cambio de divisas, simplificando el envío de dineros a Venezuela.
-    Contamos con amplia experiencia en el mercado, la que brinda credibilidad y confianza a nuestros clientes.
-  </p>
+  <div class="compania text-center ">
 
-  <h2>
-    Nuestra misión
-  </h2>
-  <p>
-    Nuestra misión es solucionar, ágilmente, las necesidades de intercambio de moneda de nuestros clientes, brindando un servicio
-    de calidad, caracterizado por la rapidez, la seguridad y la seriedad.
-  </p>
-  <p>
-    El objetivo de 123depositos.com se basa en prestar a los clientes una atención de calidad, digna, rápida y segura, proporcionando
-    bienestar Integral.
-  </p>
+    <div class="container ">
+      <div class="image-123 p-3">
+        <img src="assets/img/image123.png" height="200px">
+
+      </div>
+      <h2>Nuestra compañía</h2>
+      <p>
+        Somos una compañía que busca satisfacer la necesidad de cambio de divisas, simplificando el envío de dineros a Venezuela.
+        Contamos con amplia experiencia en el mercado, la que brinda credibilidad y confianza a nuestros clientes.
+      </p>
+    </div>
+  </div>
+
+
+  <div class="mision text-center">
+    <div class="container">
+      <h2>
+        Nuestra misión
+      </h2>
+      <p>
+        Nuestra misión es solucionar, ágilmente, las necesidades de intercambio de moneda de nuestros clientes, brindando un servicio
+        de calidad, caracterizado por la rapidez, la seguridad y la seriedad.
+      </p>
+      <p>
+        El objetivo de 123depositos.com se basa en prestar a los clientes una atención de calidad, digna, rápida y segura, proporcionando
+        bienestar Integral.
+      </p>
+
+    </div>
+
+  </div>
+
 </div>
