--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -31,7 +31,9 @@
       </ul>
       <ul class="nav navbar-nav ml-auto">
         <li class="nav-item" *ngIf="!_usuario.usuario.id_usuario">
-          <a class="nav-link" routerLink="login">Ingresar</a>
+          <a class="nav-link " routerLink="login">
+            Ingresar
+          </a>
         </li>
         <li class="nav-item" *ngIf="!_usuario.usuario.id_usuario">
           <a class="nav-link" routerLink="registro">Registrar</a>
@@ -42,7 +44,7 @@
           <div class="dropdown-menu usuario" aria-labelledby="usuario">
 
             <p>{{ _usuario.usuario.paterno }}, {{ _usuario.usuario.nombres }}</p>
-            
+
 
             <a class="btn btn-sm btn-outline-primary" href="#" (click)="cerrar()">Cerrar sesión</a>
 
