--- a/src/app/pages/como/como.component.html
+++ b/src/app/pages/como/como.component.html
@@ -1,73 +1,117 @@
 <div class="container principal">
 
-  <h2>
-    Cómo funciona
-  </h2>
+  <div class="paso1">
+    <div class="row">
+      <div class="col-sm ">
+        <div class="paso">
+          <h3 class="align-middle" >Paso 1</h3>
+        </div>
+      </div>
+      <div class="col-sm ">
+        <div class="imagen">
+          <img src="assets/img/como/paso1-1.png" alt="Paso1">
+        </div>
+        <div class="texto">
+          A. Regístrate e inicia sesión.
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso1-2.png" alt="Paso1">
+        </div>
+        <div class="texto">
+          B. Ingresa a la pestaña transferencias.
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso1-3.png" alt="Paso1">
+        </div>
+        <div class="texto">
+          C. Simula tu monto a transferir.
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso1-4.png" alt="Paso1">
+        </div>
+        <div class="texto">
+          D. Verifica el monto que va a llegar a destino.
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <h3>Paso 1</h3>
-  <ol>
-    <li>
-      <a routerLink="/registro">Regístrate</a>  e <a routerLink="/login">inicia sesión</a>.
-    </li>
-    <li>
-      Ingresa a la pestaña <a routerLink="/abono">transferencias.</a>
-    </li>
-    <li>
-      Simula tu monto a transferir.
-    </li>
-    <li>
-      Verificar el monto que va a llegar a destino.
-    </li>
-  </ol>
-  <h3>
-    Paso 2
-  </h3>
-  <ol>
-    <li>
-      Realiza tu abono a la cuenta empresa por transferencia electrónica o en las sucursales BCI más cercanas (<a href="https://www.bci.cl/personas/sucursales"
-        target="_blank">ver mapa BCI
-      </a>).
-    </li>
-    <li>
-      Datos bancarios de la empresa:
-      <ul>
-        <li>
-          Nombre de la empresa: TECNOSEG
-        </li>
-        <li>
-          Rut: 76.145.716-0
-        </li>
-        <li>
-          Banco: BCI
-        </li>
-        <li>
-          Tipo de cuenta: Corriente
-        </li>
-        <li>
-          N°de cuenta: 54005078
-        </li>
-        <li>
-          Correo: <a href="mailto:abonos@123depositos.com">abonos@123depositos.com</a>
-        </li>
-      </ul>
-    </li>
-    <li>
-      Envía tu comprobante de depósito al correo electrónico: <a href="mailto:abonos@123depositos.com">abonos@123depositos.com</a>
-    </li>
-  </ol>
+  <div class="paso2">
+    <div class="row">
+      <div class="col-sm">
+        <div class="paso">
+          <h3>Paso 2</h3>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso2-1.png" alt="Paso2">
+        </div>
+        <div class="texto">
+          A. Realiza tu abono a la cuenta empresa por transferencia o en sucursales BCI.
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso2-2.png" alt="Paso2">
+        </div>
+        <div class="texto">
+          B. Datos Bancarios de la empresa: TECNOSEG <br> Nombre de la empresa: TECNOSEG <br> RUT: 76.145.716-0 <br> Banco:
+          BCI <br> Tipo de cuenta: Corriente <br> N° de cuenta: 54005078 <br> Correo: abonos@123depositos.com
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso2-3.png" alt="Paso2">
+        </div>
+        <div class="texto">
+          C. Envía el comprobante del depósito a abonos@123depositos.com
+        </div>
+      </div>
 
-  <h3>
-    Paso 3
-  </h3>
-  <ol>
-    <li>
-      Ingresa a tu destinatario (Nuevo / ya registrado en tu cuenta 123depositos.com).
-    </li>
-    <li>
-      Adjunta tu depósito.
-    </li>
-    <li>
-      Haz click en la pestaña (ya transferí).
-    </li>
-  </ol>
+    </div>
+  </div>
+
+  <div class="paso3">
+    <div class="row">
+      <div class="col-sm">
+        <div class="paso">
+          <h3>Paso 3</h3>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso3-1.png" alt="Paso3">
+        </div>
+        <div class="texto">
+          A. Agrega tu destinatario.
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso3-2.png" alt="Paso3">
+        </div>
+        <div class="texto">
+          B. Adjunta tu depósito.
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="imagen">
+          <img src="assets/img/como/paso3-3.png" alt="Paso3">
+        </div>
+        <div class="texto">
+          C. Haz click en el checkbox ya transferí.
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 </div>
