--- a/src/app/pages/contacto/contacto.component.css
+++ b/src/app/pages/contacto/contacto.component.css
@@ -1,3 +1,28 @@
 .principal {
     min-height: 600px;
 }
+
+
+.imagen-fondo {
+    background-image: url("/assets/img/fondo123.png");
+    background-size: cover;
+}
+
+.texto-derecho {
+    height: 600px;
+    text-align: center;
+    position: relative;
+    top: 50%;
+    color: white;
+    font-size: 2em;
+}
+
+.texto-izquierdo {
+    font-size: 1.5em;
+}
+
+.marco {
+    border: 1px solid;
+    border-color: #ddcccc;
+    
+}
