--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -36,7 +36,7 @@
           <textarea formControlName="mensaje" name="mensaje" class="form-control" id="mensaje" placeholder="mensaje" rows="5" required ></textarea>
 
         </div>
-        <button type="submit" class="btn btn-primary">Enviar mensaje</button>
+        <button [disabled]="_contacto.cargando" type="submit" class="btn btn-primary">Enviar mensaje</button>
       </form>
     </div>
     <div class="col-md-6 fondo-azul imagen-fondo ">
