--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="login">Inicio</a>
+          <a class="nav-link" routerLink="inicio">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="compania">Nuestra compañía</a>
