--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary"> -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
   <div class="container">
-    <a routerLink="login" class="navbar-brand"> <img src="assets/img/123depositos_1.png" width="150px"> </a>
+    <a routerLink="inicio" class="navbar-brand"> <img src="assets/img/123depositos_1.png" width="150px"> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
