--- a/src/app/pages/como/como.component.html
+++ b/src/app/pages/como/como.component.html
@@ -54,7 +54,7 @@
           <img src="assets/img/como/paso2-1.png" alt="Paso2">
         </div>
         <div class="texto">
-          A. Realiza tu abono a la cuenta empresa por transferencia o en sucursales BCI.
+          A. Realiza tu abono a la cuenta empresa por transferencia o en <a href="https://www.bci.cl/personas/sucursales" target="_blank">sucursales BCI.</a>
         </div>
       </div>
       <div class="col-sm">
